[project]
name = "cerberus-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "a2kad",email = "reshetnikovruslan705@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "playwright (>=1.57.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
]

[tool.poetry]
packages = [{include = "cerberus_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
